BBC iPlayer, new jumpy

--- a/src/main/external-resources/PMS.conf
+++ b/src/main/external-resources/PMS.conf
@@ -8,7 +8,7 @@ minimized = false
 hidevideosettings = false
 usecache = false
 charsetencoding = 850
-engines = mencoder,avsmencoder,tsmuxer,ffmpegaudio,mplayeraudio,tsmuxeraudio,vlcvideo,mencoderwebvideo,mplayervideodump,mplayerwebaudio,vlcaudio,ffmpegdvrmsremux
+engines = pmsencoder,mencoder,avsmencoder,tsmuxer,ffmpegaudio,mplayeraudio,tsmuxeraudio,vlcvideo,mencoderwebvideo,mplayervideodump,mplayerwebaudio,vlcaudio,ffmpegdvrmsremux
 autoloadsrt = true
 avisynth_convertfps = true
 avisynth_script = #AviSynth script is now fully customisable !\u0001#You must use the following variables (\"clip\" being the avisynth variable of the movie):\u0001#<movie>: insert the complete DirectShowSource instruction [ clip=DirectShowSource(movie, convertfps) ]\u0001#<sub>: insert the complete TextSub\/VobSub instruction if there's any detected srt\/sub\/idx\/ass subtitle file\u0001#<moviefilename>: variable of the movie filename, if you want to do all this by yourself\u0001#Be careful, the custom script MUST return the clip object\u0001<movie>\u0001<sub>\u0001return clip
@@ -58,12 +58,33 @@ alternate_thumb_folder =
 remote_control = true
 audiochannels = 2
 channels.debug = true
-mencoder_fontconfig = true
 mencoder_ass_defaultstyle = true
-mencoder_subcp = ISO-8859-10
 hide_transcode_folder = false
 mencoder_noass_scale = 2
 mencoder_noass_subpos = 10
 mencoder_nooutofsync = false
 #channels.subtitles = true
-dbgpack = extras\\channels\\channel.log,pmsencoder.log,plugins\\jumpy\\jumpy.log
+dbgpack = extras\\channels\\channel.log,pmsencoder.log
+channels.path = extras\\channels
+pmsencoder.script.directory = extras\\scripts
+youtube-dl.path = extras\\bin\\youtube-dl.exe
+get-flash-videos.path = extras\\scripts\\get_flash_videos.pl
+perl.path = extras\\perl\\bin\\perl.exe
+python.path = extras\\Python27\\python
+rtmpdump.path = extras\\bin\\rtmpdump.exe
+curl.path = extras\\bin\\curl.exe
+cookie.path = extras\\cookies
+cred.path = c:\\ProgramData\\PMS-SHB\\PMS.cred
+#channels.movieinfo = true
+#sopcast.path = C:\\Program Files (x86)\\SopCast\\SopCast.exe
+http_engine_v2 = false
+channels.favorite = true
+image_thumbnails = true
+hdaudio_passthrough = false
+embed_dts_in_pcm = false
+remote_client = true
+enable_archive_browsing = true
+channels.download_only=true
+channels.favorite=true
+
+
